objects/Partner_Directory_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account object lookup for partner directory.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Directory-Stagings</relationshipLabel>
        <relationshipName>Partner_Directory_Stagings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Channel Manager Approved</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Channel Manager Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Description__c</fullName>
        <description>Company Description</description>
        <label>Company Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country_Territory__c</fullName>
        <label>Country-Territory</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herz.</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brit. Indian Ocean Terr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Directory_Stagings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HQ_Address__c</fullName>
        <description>Head Quarters Address</description>
        <label>HQ Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Type_Admin__c</fullName>
        <formula>IF ( INCLUDES ( Account__r.Partner_Offering_Type__c , &quot;PureEngage Prem&quot; ), &quot;PureEngage Prem, &quot;,null ) &amp; 
IF ( INCLUDES ( Account__r.Partner_Offering_Type__c , &quot;PureEngage Cloud Reseller&quot; ), &quot;PureEngage Cloud Reseller, &quot;,null ) &amp; 
IF ( INCLUDES ( Account__r.Partner_Offering_Type__c , &quot;PureConnect Prem&quot; ), &quot;PureConnect Prem, &quot;,null ) &amp; 
IF ( INCLUDES ( Account__r.Partner_Offering_Type__c , &quot;PureConnect Cloud Reseller&quot; ), &quot;PureConnect Cloud Reseller, &quot;,null ) &amp; 
IF ( INCLUDES ( Account__r.Partner_Offering_Type__c , &quot;PureCloud Reseller&quot; ), &quot;PureCloud Reseller, &quot;,null )&amp; 
IF ( INCLUDES ( Account__r.Partner_Offering_Type__c , &quot;PureConnect CSP&quot; ), &quot;PureConnect CSP, &quot;,null )&amp; 
IF ( INCLUDES ( Account__r.Partner_Offering_Type__c , &quot;PureEngage CSP&quot; ), &quot;PureEngage CSP, &quot;,null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering Type Admin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <label>Offering Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>PureConnect</fullName>
                </value>
                <value>
                    <fullName>PureEngage</fullName>
                </value>
                <value>
                    <fullName>Speech Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PartnerTypeSupport__c</fullName>
        <label>PartnerTypeSupport</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value Added Reseller</fullName>
                </value>
                <value>
                    <fullName>Cloud Reseller</fullName>
                </value>
                <value>
                    <fullName>Cloud Solution Provider</fullName>
                </value>
                <value>
                    <fullName>Services Partner</fullName>
                </value>
                <value>
                    <fullName>Individual Consultant</fullName>
                </value>
                <value>
                    <fullName>Global Strategic Alliance</fullName>
                </value>
                <value>
                    <fullName>Specialized Reseller</fullName>
                </value>
                <value>
                    <fullName>Managed Services Provider</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Country__c</fullName>
        <description>Partner Application category and account country.</description>
        <label>Partner Country</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Type_Admin__c</fullName>
        <formula>IF ( INCLUDES ( Account__r.PartnerType__c , &quot;VAR&quot; ), &quot;Value Added Reseller; &quot;,null )&amp;
IF ( INCLUDES ( Account__r.PartnerType__c , &quot;Cloud Reseller&quot; ), &quot;Cloud Reseller; &quot;,null )&amp;
IF ( INCLUDES ( Account__r.PartnerType__c , &quot;Cloud Solution Provider&quot; ), &quot;Cloud Solution Provider; &quot;,null )&amp;
IF ( INCLUDES ( Account__r.PartnerType__c , &quot;Service Partner&quot; ), &quot;Service Partner; &quot;,null ) &amp;
IF ( INCLUDES ( Account__r.PartnerType__c , &quot;Consultant&quot; ), &quot;Individual Consultant; &quot;,null ) &amp;
IF ( INCLUDES ( Account__r.PartnerType__c , &quot;Global Strategic Alliance&quot; ), &quot;Global Strategic Alliance; &quot;,null )&amp;
IF ( INCLUDES ( Account__r.PartnerType__c , &quot;Technology Partner&quot; ), &quot;Independent Software Vendor; &quot;,null )&amp;
IF ( INCLUDES ( Account__r.PartnerType__c , &quot;Specialized Reseller&quot; ), &quot;Specialized Reseller; &quot;,null ) &amp;
IF ( INCLUDES ( Account__r.PartnerType__c , &quot;Managed Services Provider&quot; ), &quot;Managed Services Provider; &quot;,null )&amp;
IF ( INCLUDES ( Account__r.PartnerType__c , &quot;OEM Partner&quot; ), &quot;OEM; &quot;,null )&amp;

IF ( INCLUDES ( Account__r.PartnerType__c , &quot;Cloud Partner&quot; ), &quot;Cloud Partner; &quot;,null )&amp;
IF ( INCLUDES ( Account__r.PartnerType__c , &quot;Contract Reseller&quot; ), &quot;Contract Reseller; &quot;,null )&amp;
IF ( INCLUDES ( Account__r.PartnerType__c , &quot;Cloud Referral Partner&quot; ), &quot;Cloud Referral Partner; &quot;,null )&amp;
IF ( INCLUDES ( Account__r.PartnerType__c , &quot;Lead Referral&quot; ), &quot;Lead Referral; &quot;,null )&amp;
IF ( INCLUDES ( Account__r.PartnerType__c , &quot;Support Only&quot; ), &quot;Support Only; &quot;,null )&amp;
IF ( INCLUDES ( Account__r.PartnerType__c , &quot;Non-Commercial&quot; ), &quot;Non-Commercial; &quot;,null )&amp;
IF ( INCLUDES ( Account__r.PartnerType__c , &quot;AppFoundry Partner&quot; ), &quot;AppFoundry Partner; &quot;,null )&amp;
IF ( INCLUDES ( Account__r.PartnerType__c , &quot;Transformational Partner&quot; ), &quot;Transformational Partner; &quot;,null )&amp;
IF ( INCLUDES ( Account__r.PartnerType__c , &quot;Cloud Partner&quot; ), &quot;Cloud Partner; &quot;,null )&amp;
IF ( INCLUDES ( Account__r.PartnerType__c , &quot;Prospective Transformational Partner&quot; ), &quot;Prospective Transformational Partner; &quot;,null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>text(Account__r.Country__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMART_Qualified__c</fullName>
        <formula>Account__r.SMART_Qualified__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMART Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialization_Admin__c</fullName>
        <formula>IF ( INCLUDES ( Account__r.Specialization__c, &quot;PureEngage - Core&quot; ), &quot;PureEngage - Inbound, &quot;,null ) &amp; 
IF ( INCLUDES ( Account__r.Specialization__c, &quot;PureEngage - Outbound&quot; ), &quot;PureEngage - Outbound, &quot;,null ) &amp; 
IF ( INCLUDES ( Account__r.Specialization__c, &quot;PureEngage - WFM&quot; ), &quot;PureEngage - WFM, &quot;,null ) &amp; 
IF ( INCLUDES ( Account__r.Specialization__c, &quot;PureEngage - EWM&quot; ), &quot;PureEngage - EWM, &quot;,null ) &amp; 
IF ( INCLUDES ( Account__r.Specialization__c, &quot;PureEngage - Digital&quot; ), &quot;PureEngage - Digital, &quot;,null )&amp; 
IF ( INCLUDES ( Account__r.Specialization__c, &quot;PureEngage - Self-Service&quot; ), &quot;PureEngage - Self-Service, &quot;,null )&amp;
IF ( INCLUDES ( Account__r.Specialization__c, &quot;PureConnect - Core&quot; ), &quot;PureConnect - Inbound, &quot;,null )&amp; 
IF ( INCLUDES ( Account__r.Specialization__c, &quot;PureConnect - Dialer&quot; ), &quot;PureConnect - Dialer, &quot;,null )&amp; 
IF ( INCLUDES ( Account__r.Specialization__c, &quot;PureConnect - WFM&quot; ), &quot;PureConnect - WFM, &quot;,null )&amp; 
IF ( INCLUDES ( Account__r.Specialization__c, &quot;PureConnect - Quality Management&quot; ), &quot;PureConnect - Quality Management, &quot;,null )&amp; 
IF ( INCLUDES ( Account__r.Specialization__c, &quot;PureConnect - Developer&quot; ), &quot;PureConnect - Developer, &quot;,null )&amp; 
IF ( INCLUDES ( Account__r.Specialization__c, &quot;PureCloud&quot; ), &quot;PureCloud, &quot;,null )&amp; 
IF ( INCLUDES ( Account__r.Specialization__c, &quot;Speech Analytics&quot; ), &quot;Speech Analytics, &quot;,null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specialization Admin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialization__c</fullName>
        <label>Specialization</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureEngage Core</fullName>
                </value>
                <value>
                    <fullName>PureEngage Outbound</fullName>
                </value>
                <value>
                    <fullName>PureEngage WFM</fullName>
                </value>
                <value>
                    <fullName>PureEngage EWM</fullName>
                </value>
                <value>
                    <fullName>PureEngage Digital</fullName>
                </value>
                <value>
                    <fullName>PureEngage Self-Service</fullName>
                </value>
                <value>
                    <fullName>PureConnect Core</fullName>
                </value>
                <value>
                    <fullName>PureConnect Dialer</fullName>
                </value>
                <value>
                    <fullName>PureConnect WFM</fullName>
                </value>
                <value>
                    <fullName>PureConnect Quality Management</fullName>
                </value>
                <value>
                    <fullName>PureConnect Developer</fullName>
                </value>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>Stand-alone Speech Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier_Admin__c</fullName>
        <formula>text(Account__r.Partner_Tier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Order__c</fullName>
        <formula>IF ( ISPICKVAL ( Account__r.Partner_Tier__c , &quot;Gold&quot; ), &quot;1&quot;,null ) &amp; 
IF ( ISPICKVAL ( Account__r.Partner_Tier__c, &quot;Silver&quot; ), &quot;2&quot;,null) &amp; 
IF ( ISPICKVAL ( Account__r.Partner_Tier__c, &quot;Bronze&quot; ), &quot;3&quot;,null) &amp; 
IF ( ISPICKVAL ( Account__r.Partner_Tier__c, &quot;Authorized&quot; ), &quot;4&quot;,null) &amp; 
IF ( ISPICKVAL ( Account__r.Partner_Tier__c, &quot;&quot; ), &quot;5&quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>channel_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Channel Manager from account record.</description>
        <label>channel Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Directory_Stagings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Partner Directory-Staging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>channel_Manager__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Offering_Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <columns>Partner_Type_Admin__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Draft</fullName>
        <columns>NAME</columns>
        <columns>Approval_Status__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Account__c</columns>
        <columns>Partner_Name__c</columns>
        <columns>Region__c</columns>
        <columns>HQ_Address__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>contains</operation>
            <value>Draft</value>
        </filters>
        <label>Draft</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Published</fullName>
        <columns>Approval_Status__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Account__c</columns>
        <columns>Partner_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>contains</operation>
            <value>Published</value>
        </filters>
        <label>Published</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rejected</fullName>
        <columns>NAME</columns>
        <columns>Approval_Status__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Account__c</columns>
        <columns>Partner_Name__c</columns>
        <columns>Region__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>contains</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Partner Directory-Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Directory-Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>